--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "jh"
+name = "jh-rs"
 version = "0.1.0"
 authors = ["DaanA32 <daan32@gmail.com>"]
 edition = "2018"
+license-file = "LICENCE"
+description = "JH hash implementation in pure rust"
+repository = "https://github.com/DaanA32/jh-rs"
+keywords = ["hash"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
