Update for publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "jh-rs"
 version = "0.1.0"
 authors = ["DaanA32 <daan32@gmail.com>"]
 edition = "2018"
-license-file = "LICENCE"
+license-file = "LICENSE"
 description = "JH hash implementation in pure rust"
 repository = "https://github.com/DaanA32/jh-rs"
 keywords = ["hash"]
